style address.css

--- a/style address.css
+++ b/style address.css
@@ -9,9 +9,8 @@ body {
 
 .container {
     width: 100%;
-    max-width: 400px;
+    max-width: 600px;
     padding: 20px;
-    box-sizing: border-box;
 }
 
 .title {
@@ -55,6 +54,7 @@ body {
     color: #333;
     font-size: 20px;
     padding: 0px 0;
+    margin-left: 20px;
     border: none;
     border-radius: 22px;
     cursor: pointer;
